# rust-guestbook-rest

./: .gitignore  Cargo.toml
migrations/2023-02-14-021030_create_guestbook_table/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  module_guestbook.rs  schema.rs
