[package]
name = "rust_guestbook_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
